Security, addMessage is now seperate function

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <input type="submit" value="Join Game" />
   </form>
 
-  <p id="chatLog"></p>
+  <div id="chatLog"></div>
 
   <form id="sendMessage" action="javascript:void(0);" onsubmit="sendMessage()">
     <input type="text" name="mssg" value="" />
