--- a/index.html
+++ b/index.html
@@ -9,22 +9,29 @@
     <div id="joinButton" class="button">Join</div>
   </div>
 
-  <p id="gameCode"></p>
+  <!-- Host Settings -->
+  <form
+    id="hostSettings"
+    action="javascript:void(0);"
+    onsubmit="hostSettings()"
+  >
+    Code Length: <input type="number" name="CodeLength" value="4" /><br />
+    Max Guesses: <input type="number" name="CodeLength" value="10" /><br />
 
+    <input type="submit" value="Create Game" />
+  </form>
+
+  <!-- Gamecodes -->
+  <p id="gameCode"></p>
   <form id="joinGame" action="javascript:void(0);" onsubmit="connectForm()">
-    <input type="text" name="gameCode" value="" />
+    Game Code: <input type="text" name="gameCode" value="" />
     <input type="submit" value="Join Game" />
   </form>
 
-  <div id="chatLog"></div>
-
-  <form id="sendMessage" action="javascript:void(0);" onsubmit="sendMessage()">
-    <input type="text" name="mssg" value="" />
-    <input type="submit" value="Send" />
-  </form>
-
+  <!-- scripts -->
   <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
   <script src="test.js"></script>
   <script src="formManager.js"></script>
   <script src="joinHostMenu.js"></script>
+  <script src="cssHelper.js"></script>
 </body>
