--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     action="javascript:void(0);"
     onsubmit="hostSettings()"
   >
-    Code Length: <input type="number" name="CodeLength" value="4" /><br />
-    Max Guesses: <input type="number" name="CodeLength" value="10" /><br />
+    Code Length: <input type="number" name="codeLength" value="4" /><br />
+    Max Guesses: <input type="number" name="maxGuesses" value="10" /><br />
 
     <input type="submit" value="Create Game" />
   </form>
@@ -30,7 +30,7 @@
 
   <!-- scripts -->
   <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
-  <script src="test.js"></script>
+  <script src="p2pManager.js"></script>
   <script src="formManager.js"></script>
   <script src="joinHostMenu.js"></script>
   <script src="cssHelper.js"></script>
