--- a/index.html
+++ b/index.html
@@ -28,10 +28,27 @@
     <input type="submit" value="Join Game" />
   </form>
 
+  <!-- Gameboard -->
+  <div id="gameBoard"></div>
+
   <!-- scripts -->
-  <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.2/peerjs.min.js"
+    integrity="sha512-4wTQ8feow93K3qVGVXUGLULDB9eAULiG+xdbaQH8tYZlXxYv9ij+evblXD0EOqmGWT8NBTd1vQGsURvrQzmKeg=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script>
   <script src="p2pManager.js"></script>
   <script src="formManager.js"></script>
   <script src="joinHostMenu.js"></script>
   <script src="cssHelper.js"></script>
+
+  <script src="gameBoard.js"></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"
+    integrity="sha512-gQVBYBvfC+uyor5Teonjr9nmY1bN+DlOCezkhzg4ShpC5q81ogvFsr5IV4xXAj6HEtG7M1Pb2JCha97tVFItYQ=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+    defer
+  ></script>
 </body>
