--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
   <script src="joinHostMenu.js"></script>
   <script src="cssHelper.js"></script>
 
-  <script src="gameBoard.js"></script>
+  <script src="game/pinSelector.js"></script>
+  <script src="game/gameBoard.js"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"
     integrity="sha512-gQVBYBvfC+uyor5Teonjr9nmY1bN+DlOCezkhzg4ShpC5q81ogvFsr5IV4xXAj6HEtG7M1Pb2JCha97tVFItYQ=="
