--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
     action="javascript:void(0);"
     onsubmit="hostSettings()"
   >
-    Code Length: <input type="number" name="codeLength" value="4" /><br />
-    Max Guesses: <input type="number" name="maxGuesses" value="10" /><br />
+    Code Length:
+    <input type="number" autocomplete="off" name="codeLength" value="4" /><br />
+    Max Guesses:
+    <input
+      type="number"
+      autocomplete="off"
+      name="maxGuesses"
+      value="10"
+    /><br />
 
     <input type="submit" value="Create Game" />
   </form>
@@ -24,7 +31,7 @@
   <!-- Gamecodes -->
   <p id="gameCode"></p>
   <form id="joinGame" action="javascript:void(0);" onsubmit="connectForm()">
-    Game Code: <input type="text" name="gameCode" value="" />
+    Game Code: <input type="text" autocomplete="off" name="gameCode" value="" />
     <input type="submit" value="Join Game" />
   </form>
 
