single player mode

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       value="10"
     /><br />
 
+    Single Player:
+    <input type="checkbox" name="isSinglePlayer" value="Bike" /> <br />
+
     <input type="submit" value="Create Game" />
   </form>
 
