--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     /><br />
 
     Single Player:
-    <input type="checkbox" name="isSinglePlayer" value="Bike" /> <br />
+    <input type="checkbox" name="isSinglePlayer" /> <br />
 
     <input type="submit" value="Create Game" />
   </form>
