--- a/index.html
+++ b/index.html
@@ -25,8 +25,18 @@
       value="10"
     /><br />
 
+    Num Colors:
+    <input
+      type="number"
+      autocomplete="off"
+      id="numColors"
+      min="1"
+      max="8"
+      name="numColors"
+      value="8"
+    /><br />
     Single Player:
-    <input type="checkbox" name="isSinglePlayer" /> <br />
+    <input type="checkbox" autocomplete="off" name="isSinglePlayer" /> <br />
 
     <input type="submit" value="Create Game" />
   </form>
