--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <head>
   <title>1v1 Mastermind</title>
   <link rel="stylesheet" href="main.css" />
+
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@900&display=swap");
+  </style>
 </head>
 <body>
   <!-- Header -->
-  <div class="header"></div>
+  <div class="header" id="header">
+    <h1>MASTERMIND DUEL</h1>
+  </div>
 
   <!-- Host or Join -->
   <div class="buttons">
