--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     <div>
       <label class="label">Code Length:</label>
       <input
-        class="input"
-        type="number"
+        class="input slider"
         autocomplete="off"
         name="codeLength"
         value="4"
