--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <head>
   <title>1v1 Mastermind</title>
-  <link rel="stylesheet" href="main.css" />
 
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@900&display=swap");
   </style>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+  <link rel="stylesheet" href="main.css" />
+
 </head>
+
 <body>
   <!-- Header -->
   <div class="header" id="header">
@@ -13,57 +16,48 @@
   </div>
 
   <!-- Host or Join -->
-  <div class="buttons">
-    <div id="hostButton" class="button">Host</div>
-    <div id="joinButton" class="button">Join</div>
+  <div id='startMenu'>
+    <div class="columns">
+      <div class="column">
+      </div>
+      <div class="column has-text-centered">
+        <div id="hostButton" class="button">Host</div>
+      </div>
+      <div class="column has-text-centered">
+        <div id="joinButton" class="button">Join</div>
+      </div>
+      <div class="column">
+      </div>
+    </div>
+
+  </div>
+  <div class='columns'>
+    <div class="column has-text-centered">
+
+      <p><b>WARNING:</b> This website uses WebRTC which means it can leak your IP, and it's very easy for your opponent
+        to
+        use
+        cheats. Only play with people you trust, single player, or with a VPN.</p>
+    </div>
   </div>
 
   <!-- Host Settings -->
-  <form
-    id="hostSettings"
-    action="javascript:void(0);"
-    onsubmit="hostSettings()"
-  >
+  <form id="hostSettings" action="javascript:void(0);" onsubmit="hostSettings()">
     <div>
       <label class="label">Code Length:</label>
-      <input
-        class="input slider"
-        autocomplete="off"
-        name="codeLength"
-        value="4"
-      />
+      <input class="input slider" autocomplete="off" name="codeLength" value="4" />
       <div class="break"></div>
 
       <label class="label">Max Guesses:</label>
-      <input
-        class="input"
-        type="number"
-        autocomplete="off"
-        name="maxGuesses"
-        value="10"
-      />
+      <input class="input" type="number" autocomplete="off" name="maxGuesses" value="10" />
       <div class="break"></div>
 
       <label class="label">Num Colors:</label>
-      <input
-        class="input"
-        type="number"
-        autocomplete="off"
-        id="numColors"
-        min="1"
-        max="8"
-        name="numColors"
-        value="8"
-      />
+      <input class="input" type="number" autocomplete="off" id="numColors" min="1" max="8" name="numColors" value="8" />
       <div class="break"></div>
 
       <label class="label">Single Player:</label>
-      <input
-        class="input"
-        type="checkbox"
-        autocomplete="off"
-        name="isSinglePlayer"
-      />
+      <input class="input" type="checkbox" autocomplete="off" name="isSinglePlayer" />
       <div class="break"></div>
 
       <br />
@@ -75,13 +69,7 @@
   <p id="gameCode"></p>
   <form id="joinGame" action="javascript:void(0);" onsubmit="connectForm()">
     <label>Game Code:</label>
-    <input
-      type="text"
-      class="input"
-      autocomplete="off"
-      name="gameCode"
-      value=""
-    />
+    <input type="text" class="input" autocomplete="off" name="gameCode" value="" />
     <div class="break"></div>
     <input type="submit" class="button submit-button" value="Join Game" />
   </form>
@@ -90,12 +78,9 @@
   <div id="gameBoard"></div>
 
   <!-- scripts -->
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.2/peerjs.min.js"
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.2/peerjs.min.js"
     integrity="sha512-4wTQ8feow93K3qVGVXUGLULDB9eAULiG+xdbaQH8tYZlXxYv9ij+evblXD0EOqmGWT8NBTd1vQGsURvrQzmKeg=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  ></script>
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="p2pManager.js"></script>
   <script src="formManager.js"></script>
   <script src="joinHostMenu.js"></script>
@@ -103,11 +88,7 @@
 
   <script src="game/pinSelector.js"></script>
   <script src="game/gameBoard.js"></script>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"
     integrity="sha512-gQVBYBvfC+uyor5Teonjr9nmY1bN+DlOCezkhzg4ShpC5q81ogvFsr5IV4xXAj6HEtG7M1Pb2JCha97tVFItYQ=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-    defer
-  ></script>
+    crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
 </body>
