Removes warning on next screen

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
       <div class="column">
       </div>
     </div>
+    <div class='columns'>
+      <div class="column has-text-centered">
 
-  </div>
-  <div class='columns'>
-    <div class="column has-text-centered">
-
-      <p><b>WARNING:</b> This website uses WebRTC which means it can leak your IP, and it's very easy for your opponent
-        to
-        use
-        cheats. Only play with people you trust, single player, or with a VPN.</p>
+        <p><b>WARNING:</b> This website uses WebRTC which means it can leak your IP, and it's very easy for your
+          opponent
+          to
+          use
+          cheats. Only play with people you trust, single player, or with a VPN.</p>
+      </div>
     </div>
   </div>
 
