Smaller code + copycode

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="break"></div>
 
       <label class="label">Single Player:</label>
-      <input class="input" type="checkbox" autocomplete="off" name="isSinglePlayer" />
+      <input type="checkbox" autocomplete="off" name="isSinglePlayer" />
       <div class="break"></div>
 
       <br />
@@ -81,10 +81,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.2/peerjs.min.js"
     integrity="sha512-4wTQ8feow93K3qVGVXUGLULDB9eAULiG+xdbaQH8tYZlXxYv9ij+evblXD0EOqmGWT8NBTd1vQGsURvrQzmKeg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="p2pManager.js"></script>
   <script src="formManager.js"></script>
   <script src="joinHostMenu.js"></script>
   <script src="cssHelper.js"></script>
+  <script src="p2pManager.js"></script>
 
   <script src="game/pinSelector.js"></script>
   <script src="game/gameBoard.js"></script>
